--- a/index.html
+++ b/index.html
@@ -17,280 +17,10 @@
   <link rel="stylesheet" href="css/default.css">
   <link rel="stylesheet" href="css/style.css">
 
-  <title>Hello, world!</title>
+  <title> </title>
 </head>
 
 <body>
-  <header data-spy="scroll" data-target="#navbarSupportedContent" data-offset="0">
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-      <a class="navbar-brand" href="#">Amit</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mx-auto">
-
-          <li class="nav-item">
-            <a class="nav-link" href="#about">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#discover">Discover</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#service">Service</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#sing">Sing Up</a>
-          </li>
-        </ul>
-        <button class="btn btn-success text-dark" type="submit"> Sing In
-
-        </button>
-      </div>
-    </nav>
-    <div class="mid">
-      <video src="./video/1.mp4" type="video/mp4" autoplay muted loop class="embed-responsive"></video>
-      <div class="hero text-center">
-        <h2 class="text-light display-4 font-weight-bold">Lorem ipsum dolor sit amet</h2>
-        <p class="text-light mx-auto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti omnis veritatis
-          distinctio consequuntur vitae adipisci pariatur delectus, amet praesentium recusandae!</p>
-        <a class="text-dark" href="#">Get Strated</a>
-      </div>
-
-    </div>
-  </header>
-
-  <!-- About Section  -->
-
-  <section id="about" class="about py-5">
-    <div class="row aline-center container my-5 mx-auto">
-      <div class="text col-lg-6 col-md-6 col-12 w-50% py-5">
-        <h6>PRIMUM BANK</h6>
-        <h2>Lorem ipsum dolor sit amet</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus tenetur consequatur, unde sed facilis
-          magni.</p>
-        <a href="#">Learn More</a>
-      </div>
-      <div class="image image-fluid col-lg-6 col-md-6 col-12 w-50%">
-        <img src="./img/1.svg" alt="">
-      </div>
-
-    </div>
-  </section>
-
-  <!-- Discover Section  -->
-
-  <section id="discover" class="discover py-5">
-    <div class="row aline-center container my-5 mx-auto">
-
-      <div class="image image-fluid col-lg-6 col-md-6 col-12 w-50%">
-        <img src="./img/2.png" alt="">
-      </div>
-      <div class="text col-lg-6 col-md-6 col-12 w-50% py-5">
-        <h6>UNLIMITED ACCESS</h6>
-        <h2>Login to your account at any time</h2>
-        <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus tenetur consequatur, unde
-          sed facilis
-          magni.</p>
-        <a href="#" class="">Learn More</a>
-      </div>
-
-    </div>
-  </section>
-
-  <!-- Service Section  -->
-
-  <section id="service" class="service py-5 container-fluid">
-    <div class="row heading">
-      <div class="col-12 text-center mx-auto my-5">
-        <h2 class="font-weight-bold pb-5">Our Service</h2>
-      </div>
-    </div>
-    <div class="row mx-auto justify-content-center text-center">
-      <div class="one col-lg-3 col-md-3 col-12 w-25">
-        <img class="img-fluid w-75" src="./img/1.svg" alt="">
-        <h5 class="font-weight-bold pt-4">Reduce Expenses</h5>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, repellat.</p>
-      </div>
-      <div class="one col-lg-3 col-md-3 col-12 w-25">
-        <img class="img-fluid w-75" src="./img/2.png" alt="">
-        <h5 class="font-weight-bold pt-4">Reduce Expenses</h5>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, repellat.</p>
-      </div>
-      <div class="one col-lg-3 col-md-3 col-12 w-25">
-        <img class="img-fluid w-75" src="./img/3.png" alt="">
-        <h5 class="font-weight-bold pt-4">Reduce Expenses</h5>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, repellat.</p>
-      </div>
-    </div>
-  </section>
-
-
-  <!-- SingUp Section  -->
-
-  <section id="sing" class="sing py-5">
-    <div class="row aline-center container my-5 mx-auto">
-      <div class="text col-lg-6 col-md-6 col-12 w-50% py-5">
-        <h6>JOIN OUR TEAM</h6>
-        <h2>Creating an account is extremely easy</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus tenetur consequatur, unde sed facilis
-          magni.</p>
-        <a href="#">Start Now</a>
-      </div>
-      <div class="image image-fluid col-lg-6 col-md-6 col-12 w-50%">
-        <img src="./img/4.png" alt="">
-      </div>
-
-    </div>
-  </section>
-
-  <!-- Footer section  -->
-
-  <!-- Footer -->
-  <footer class="page-footer font-small text-light">
-
-    <div>
-      <div class="container-fluid text">
-
-        <!-- Grid row-->
-        <div class="row py-4 d-flex align-items-center w-75 mx-auto">
-
-          <!-- Grid column -->
-          <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
-            <h6 class="mb-0">Get connected with us on social networks!</h6>
-          </div>
-          <!-- Grid column -->
-
-          <!-- Grid column -->
-          <div class="col-md-6 col-lg-7 text-center text-md-right">
-
-            <!-- Facebook -->
-            <a class="fb-ic text-dark">
-              <i class="fa fa-facebook mr-4"> </i>
-            </a>
-            <!-- Twitter -->
-            <a class="tw-ic text-dark">
-              <i class="fa fa-twitter red-text mr-4"> </i>
-            </a>
-            <!-- Google +-->
-            <a class="gplus-ic text-dark">
-              <i class="fa fa-google-plus white-text mr-4"> </i>
-            </a>
-            <!--Linkedin -->
-            <a class="li-ic text-dark">
-              <i class="fa fa-linkedin white-text mr-4"> </i>
-            </a>
-            <!--Instagram-->
-            <a class="ins-ic text-dark">
-              <i class="fa fa-instagram white-text"> </i>
-            </a>
-
-          </div>
-          <!-- Grid column -->
-
-        </div>
-        <!-- Grid row-->
-
-      </div>
-    </div>
-
-    <!-- Footer Links -->
-    <div class="container text-center text-md-left mt-5">
-
-      <!-- Grid row -->
-      <div class="row mt-3">
-
-        <!-- Grid column -->
-        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-
-          <!-- Content -->
-          <h6 class="text-uppercase font-weight-bold text-light">Company name</h6>
-          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-          <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet,
-            consectetur
-            adipisicing elit.</p>
-
-        </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
-        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-
-          <!-- Links -->
-          <h6 class="text-uppercase font-weight-bold text-light">Products</h6>
-          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-          <p>
-            <a href="#!">MDBootstrap</a>
-          </p>
-          <p>
-            <a href="#!">MDWordPress</a>
-          </p>
-          <p>
-            <a href="#!">BrandFlow</a>
-          </p>
-          <p>
-            <a href="#!">Bootstrap Angular</a>
-          </p>
-
-        </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
-        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-
-          <!-- Links -->
-          <h6 class="text-uppercase font-weight-bold text-light">Useful links</h6>
-          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-          <p>
-            <a href="#!">Your Account</a>
-          </p>
-          <p>
-            <a href="#!">Become an Affiliate</a>
-          </p>
-          <p>
-            <a href="#!">Shipping Rates</a>
-          </p>
-          <p>
-            <a href="#!">Help</a>
-          </p>
-
-        </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
-        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-
-          <!-- Links -->
-          <h6 class="text-uppercase font-weight-bold text-light">Contact</h6>
-          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-          <p>
-            <i class="fa fa-home mr-3"></i> New York, NY 10012, US</p>
-          <p>
-            <i class="fa fa-envelope mr-3"></i> info@example.com</p>
-          <p>
-            <i class="fa fa-phone mr-3"></i> + 01 234 567 88</p>
-          <p>
-            <i class="fa fa-print mr-3"></i> + 01 234 567 89</p>
-
-        </div>
-        <!-- Grid column -->
-
-      </div>
-      <!-- Grid row -->
-
-    </div>
-    <!-- Footer Links -->
-
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
-      <a href="https://mdbootstrap.com/"> https://getmore7.com</a>
-    </div>
-    <!-- Copyright -->
-
-  </footer>
-  <!-- Footer -->
 
 
 
